--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,22 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.react-datepicker{
+  margin-top: -400px;
+}
+
+
+.react-datepicker .react-datepicker__day{
+  color: #fff;
+  background: #2980b9;
+}
+
+.react-datepicker .react-datepicker__day--disabled{
+  background: #ecf0f1;
+  color: #000
+}
+
+.Select{
+  color: #000;
+}
