--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 .react-datepicker .react-datepicker__day--disabled, .react-datepicker .react-datepicker__day--disabled:hover{
   background: rgba(149, 165, 166,0.5);
   color: rgba(52, 73, 94,1.0);
-  border: none;
+  border: 1px solid rgba(149, 165, 166,0.5);
 }
 
 .Select{
