--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
 .react-datepicker{
-  font-family: 'Josefin Sans', sans-serif !important;
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 .react-datepicker .react-datepicker__day{
